--- a/0705~0707_seoul/styles/style.css
+++ b/0705~0707_seoul/styles/style.css
@@ -1,100 +1,213 @@
+/* popup */
+#top {
+    position:fixed; right:50px; bottom:50px;
+    width:34px; height:34px;
+}
+#top img {width:100%;}
+/* all layout */
+header, 
+main .visual, 
+main .service, 
+main .bnr_bg .bnr, 
+main .board, 
+main .field_info,
+main .news,
+footer {
+    background-color:lightblue;
+    width:1152px; margin:0 auto;
+}
+/* header */
 header {}
 /* header-h top */
-header #h_top {}
-header #h_top .left {}
-header #h_top .left h1 {}
+header #h_top {
+    background-color:lightgreen;
+    height:48px;
+}
+header #h_top .left {
+    background-color:lightcoral;
+    float:left;
+}
+header #h_top .left h1 {
+    float:left;
+    width:110px; height:28px; padding-top:10px;
+}
 header #h_top .left h1 a {}
-header #h_top .left h1 a img {}
-header #h_top .left nav {}
+header #h_top .left h1 a img {width:100%; }
+header #h_top .left nav {float:left;}
 header #h_top .left nav ul {}
-header #h_top .left nav ul li {}
-header #h_top .left nav ul li a {}
-header #h_top .right {}
-header #h_top .right li {}
-header #h_top .right li a {}
+header #h_top .left nav ul li {
+    float:left; margin-left:20px;
+}
+header #h_top .left nav ul li a {
+    line-height:48px; letter-spacing:-0.02em;
+}
+header #h_top .right {
+    background-color:burlywood;
+    float:right; 
+}
+header #h_top .right li {float:left; margin-left:20px;}
+header #h_top .right li:first-child {margin-left:0;}
+/* header #h_top .right li:nth-child(1) {margin-left:0;} */
+header #h_top .right li a {line-height:48px; letter-spacing:-0.02em;}
 /* header-h btm */
-header #h_btm {}
-header #h_btm h1 {}
+header #h_btm {
+    background-color:gold;
+    height:119px; }
+header #h_btm h1 {float:left; width:150px; height:28px; line-height:119px;}
 header #h_btm h1 a {}
-header #h_btm h1 a img {}
-header #h_btm #search_frm {}
-header #h_btm #search_frm fieldset {}
-header #h_btm #search_frm fieldset legend {}
-header #h_btm #search_frm fieldset input {}
-header #h_btm #search_frm fieldset #search_btn {}
-header #h_btm #search_frm fieldset #search_btn img {}
-header #h_btm .right {}
-header #h_btm .right #langfrm {}
-header #h_btm .right #langfrm fieldset {}
-header #h_btm .right #langfrm fieldset legend {}
-header #h_btm .right #langfrm fieldset select {}
+header #h_btm h1 a img {width:100%}
+header #h_btm #search_frm {
+    float:left; width:369px; height:46px;
+    border:2px solid #1e6cb3;
+    padding:10px 20px 0; margin:36.5px 0 0 230.5px;
+}
+header #h_btm #search_frm fieldset {border:0;}
+header #h_btm #search_frm fieldset legend {display:none;}
+header #h_btm #search_frm fieldset input {
+    float:left; background:none; width:calc(100% - 20px);
+    letter-spacing:-0.02em; color:#1e6cb3;
+}
+header #h_btm #search_frm fieldset input::placeholder {letter-spacing:-0.02em; color:#1e6cb3;}
+header #h_btm #search_frm fieldset #search_btn {
+    border:0; background:none; float:right;
+    width:20px; height:20px; cursor:pointer;
+}
+header #h_btm #search_frm fieldset #search_btn img {width:100%;}
+header #h_btm .right {
+    background-color: chocolate;
+    float:right; margin-top:20.5px;
+}
+header #h_btm .right #langfrm {text-align:right;}
+header #h_btm .right #langfrm fieldset {border:0;}
+header #h_btm .right #langfrm fieldset legend {display:none;}
+header #h_btm .right #langfrm fieldset select {
+    font-size:0.833rem; letter-spacing:-0.02em; width:93px; padding:7px 0;
+    border:1px solid #1e6cb3; cursor:pointer;
+}
 header #h_btm .right #langfrm fieldset select option {}
-header #h_btm .right #langfrm fieldset #lang_btn {}
+header #h_btm .right #langfrm fieldset #lang_btn {
+    font-size:0.833rem; padding:10px 7px; background-color:#1e6cb3; 
+    color:#fff; margin-left:10px;
+    border:0; cursor:pointer;
+}
 header #h_btm .right .weather {}
 header #h_btm .right .weather .current_weather {}
-header #h_btm .right .weather .current_weather em {}
-header #h_btm .right .weather .current_dust {}
+header #h_btm .right .weather .current_weather em {
+    font-size:2.074rem; letter-spacing:-0.02em; font-weight:500;
+}
+header #h_btm .right .weather .current_dust {
+    font-size:0.833rem; letter-spacing:-0.02em;
+}
 /* main */
 main {}
 /* main-1광고배너 */
-main .visual {}
-main .visual .left {}
+main .visual {overflow: hidden;}
+main .visual .left {float:left;
+    position:relative;
+    width:770px; height:350px;
+}
 main .visual .left img {}
-main .visual .left .close {}
-main .visual .right {}
-main .visual .right .covid {}
-main .visual .right .covid .date {}
-main .visual .right .covid .data {}
-main .visual .right .covid .data1 {}
-main .visual .right .covid .data2 {}
-main .visual .right .covid .data3 {}
-main .visual .right .covid .data4 {}
-main .visual .right .covid .data5 {}
+main .visual .left .close {
+    background-color:#1e6cb3; border-radius:5px;
+    letter-spacing:-0.02em; font-weight:500; padding:10px; color:#fff;
+    position:absolute; right:10px; bottom:10px;
+}
+main .visual .right {float:right;}
+main .visual .right .covid {position:relative; width:360px; height:230px; display:block; margin-bottom:10px;}
+main .visual .right .covid span {position:absolute;}
+main .visual .right .covid .date {
+    letter-spacing:-0.02em;
+    top:19px; right:24px;
+}
+main .visual .right .covid .data {letter-spacing:-0.02em; color:#fff;}
+main .visual .right .covid .data1 {position:absolute; top:83px; left:81px;}
+main .visual .right .covid .data2 {position:absolute; top:83px; left:249px;}
+main .visual .right .covid .data3 {position:absolute; bottom:59px; left:58px;}
+main .visual .right .covid .data4 {position:absolute; bottom:59px; left:189px;}
+main .visual .right .covid .data5 {position:absolute; bottom:59px; left:290px;}
 main .visual .right .covid img {}
-main .visual .right .traffic {}
+main .visual .right .traffic {width:360px; height:110px;}
 main .visual .right .traffic img {}
-/* main-2주요서비스 */
-main .service {}
-main .service .title {}
+/* 주요서비스~새소식 제목 디자인 그룹 */
+/* 정리후 */
+main section .title {height:92px; padding:50px 0 10px 0; border-bottom:1px solid #aaa;}
+main section .title h2 {float:left; font-size:1.44rem; font-weight:500; letter-spacing:-0.02em;}
+main section .title .site {float:right; border:1px solid #ccc; padding:10px; letter-spacing:-0.02em;}
+main section .title .more {float:right; border:1px solid #ccc; padding:10px; letter-spacing:-0.02em;}
+/* 정리전 */
+/* main .service .title {}
 main .service .title h2 {}
 main .service .title .site {}
-main .service .contents {}
-main .service .contents a {}
-main .service .contents a img {}
-main .service .contents a span {}
-/* main-3배너 */
-main .bnr_bg {}
-main .bnr_bg .bnr {}
-main .bnr_bg .bnr a {}
-main .bnr_bg .bnr a img {}
-/* main-4게시판 */
-main .board {}
-main .board .event {}
 main .board .event .title {}
 main .board .event .title h2 {}
 main .board .event .title .more {}
-main .board .event .contents {}
-main .board .event .contents a {}
-main .board .event .contents a span {}
-main .board .event .contents a .administrative {}
-main .board .event .contents a .environment {}
-main .board .event .contents a .welfare {}
-main .board .event .contents a .housing {}
-main .board .event .contents a .culture {}
-main .board .festival {}
 main .board .festival .title {}
 main .board .festival .title h2 {}
 main .board .festival .title .more {}
-main .board .festival .contents {}
-main .board .festival .contents a {}
-main .board .festival .contents a span {}
-main .board .festival .contents a .environment {}
-main .board .festival .contents a .economy {}
-main .board .festival .contents a .culture {}
-main .board .service {}
 main .board .service .title {}
 main .board .service .title h2 {}
-main .board .service .contents {}
+main .field_info .title {}
+main .field_info .title h2 {}
+main .news .title {}
+main .news .title h2 {}
+main .news .title h2 .more {} */
+/* main-2주요서비스 */
+main .service {overflow: hidden;}
+main .service .title {}
+main .service .title h2 {}
+main .service .title .site {}
+main .service .contents {margin:20px;}
+main .service .contents a {float:left; padding:10px;}
+main .service .contents a img {width:60px; height:60px;}
+main .service .contents a span {font-size:0.833rem; display:block;}
+/* main-3배너 */
+main .bnr_bg {
+    height:150px; overflow: hidden;
+    background-color:#eff4f8; margin:0 auto; 
+}
+main .bnr_bg .bnr {
+    
+}
+main .bnr_bg .bnr a {float:left; margin:40px 0;}
+main .bnr_bg .bnr a img {}
+/* main-4게시판 */
+main .board {overflow:hidden;}
+main .board .event {
+    width:369px; float:left;
+}
+main .board .event .title {}
+main .board .event .title h2 {}
+main .board .event .title .more {}
+main .board .event .contents {margin-top:10px;}
+main .board .event .contents a {display:inline-block; letter-spacing:-0.04em; margin-bottom:25px;}
+main .board .event .contents a:last-child {margin-bottom:0;}
+main .board .event .contents a span {}
+main .board .event .contents a span:last-child {margin-left:10px;}
+main .board .event .contents a .administrative {color:#028ab6;}
+main .board .event .contents a .environment {color:#559100;}
+main .board .event .contents a .welfare {color:#d76000;}
+main .board .event .contents a .housing {color:#c35c3c;}
+main .board .event .contents a .culture {color:#9b64d3;}
+main .board .festival {
+    width:369px; float:left; margin-left:20px;
+}
+main .board .festival .title {}
+main .board .festival .title h2 {}
+main .board .festival .title .more {}
+main .board .festival .contents {margin-top:10px;}
+main .board .festival .contents a {display:inline-block; letter-spacing:-0.04em; margin-bottom:25px;}
+main .board .festival .contents a:last-child {margin-bottom:0;}
+main .board .festival .contents a span {}
+main .board .festival .contents a span:last-child {margin-left:10px;}
+main .board .festival .contents a .environment {color:#559100;}
+main .board .festival .contents a .economy {color:#069363;}
+main .board .festival .contents a .culture {color:#9b64d3;}
+main .board .service {
+    width:369px; float:right;
+}
+main .board .service .title {}
+main .board .service .title h2 {}
+main .board .service .contents {background-color:#eff4f8;}
 main .board .service .contents a {}
 /* main-5분야정보 */
 main .field_info {}
