--- a/reset.css
+++ b/reset.css
@@ -18,4 +18,5 @@ a {color:#000;}
 input {outline:none; border:0;}
 button {cursor:pointer; border:0;}
 fieldset {border:0;}
+/* HTML 태그에선 의미적으로 존재하나 CSS 디자인 결과에서 숨겨지는 대상 태그에 적용하는 공통 클래스 SKIP */
 .skip {display:none;}
